--- a/packages/react-components/src/base-components/combobox/Combobox.module.css
+++ b/packages/react-components/src/base-components/combobox/Combobox.module.css
@@ -210,12 +210,8 @@
       --osdk-combobox-focus-border-color,
       var(--osdk-intent-primary-rest)
     );
-    outline: var(--osdk-combobox-focus-width, var(--osdk-emphasis-focus-width))
-      solid var(--osdk-combobox-focus-color, var(--osdk-emphasis-focus-color));
-    outline-offset: var(
-      --osdk-combobox-focus-offset,
-      var(--osdk-emphasis-focus-offset)
-    );
+    outline: var(--osdk-input-focus-outline);
+    outline-offset: var(--osdk-input-focus-outline-offset, 0px);
   }
 }
 
